feat: Gitlab Events in Journal Entry
Got the functionality to insert gitlab events from the user's followed users right in the journal entry they kicked off the command from.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "main": "dist/index.html",
   "scripts": {
-    "dev": "vite",
+    "dev": "echo 'dont vite dev server'",
     "build": "tsc && vite build",
     "preinstall": "npx only-allow pnpm"
   },
